1.0
 * first release

1.1
 * hide growl warnings when mounted
 * added warning for kirin tor ring
 * hide growl warnings when you don't have a pet
 * made the options pane scrollable
 * split config into 4 panes
 * added config for overall scale and runway length

1.2
 * updated for 4.x
 * set priority config from config screen
 * focus regen support
 * more shots
 * disable kill command when no pet is out
 * don't put up explosive shot when the debuff is on the target
 * warning tooltips

1.3
 * show bar correctly when mounted on a camel
 * show bad weapon warning for any weapons under ilvl 200
 * fixed boss & raid boss detection (hopefully)
 * more shots
 * correctly delay all shots while channeling steady & cobra shots
 * fixed wait time on explosive shot during L&L
 * added a bunch of MM specific abilities with built-in rules

1.4
 * updated for 4.2
 * no more pet happiness warning (option is still there, needs removing)

1.5
 * updated for 4.3
 * shadow priest support!
 * auto-hide for unsupported classes
 * hide during taxi rides
 * added arcane shot with reserved explosive

1.6
 * updated for 5.0.4
 * removed "sad pet" warning (deprecated in 4.2)
 * moved "bad weapon" warning from 'all' to 'priest'
 * added "non-ranged weapon" warning for hunters
 * added new hunter survival abilities (dire beast, crows)
 * added support for iron hawk aspect

1.7
 * added a new preset for 5.0.5 SV, including new cooldowns
 * added glaive toss and stampede
 * removed delay during L&L - explosive shot can be GCD chained now
 * fixed a bug with (raid)boss-only abilities appear as ready when they should be totally hidden
 * don't allow crows to come up as ready when it's already on the target (bug due to crows not having a timer)
 * don't allow readiness during rapid fire buff (bad time to waste a GCD)